# AutoConnect

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
WinPcap/: CMakeLists.txt
cmake/: Common.cmake
getopt/: CMakeLists.txt
include/AutoConnect/: AutoConnectLinux.h  AutoConnectWindows.h  Json.hpp  ThreadPool.h  WinRegEditor.h  json.hpp
src/: AutoConnectLinux.cpp  AutoConnectWindows.cpp  LinuxIPCReader.cpp  Main.cpp  WinIPCReader.cpp  WinReader.cpp  main.cpp  reader.cpp
